--- a/SymphonyScramble.csproj
+++ b/SymphonyScramble.csproj
@@ -15,11 +15,19 @@
     <None Remove="Icon.ico" />
     <None Remove="Icon.bmp" />
     <None Remove="Resources\**" />
+    <None Update="SymphonyScramble.icns">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Remove="SymphonyScramble.iconset\**" />
+    <None Update="Info.plist">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
     <EmbeddedResource Include="Icon.bmp" />
     <EmbeddedResource Remove="Resources\**" />
+    <EmbeddedResource Remove="SymphonyScramble.iconset\**" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.2.1105" />
@@ -63,6 +71,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Resources\**" />
+    <Compile Remove="SymphonyScramble.iconset\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <TrimmerRootAssembly Include="MonoGame.Framework" />
+    <TrimmerRootAssembly Include="mscorlib" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
